[project]
name = "sloth"
version = "sloth.__version__"
description = "slowly evolving utilities for X-ray spectroscopy data analysuis"
authors = [
    {name = "Mauro Rovezzi",email = "mauro.rovezzi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
